--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,21 @@
-.dice-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50vw;
-    height: 50vh;
-    border: 1px solid black;
-
-    // ::ng-deep(canvas) {
-    //     width: 100%;
-    //     height: 100%;
-    //   }
+.theme-icon {
+    height: 20px;
+    width: 20px;
 }
 
 .content {
     display: flex;
     gap: 2rem;
+
+    .dice-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50vw;
+        height: 50vh;
+        margin-bottom: var(--pico-spacing);
+        border: 1px solid var(--pico-contrast);
+    }    
 
     .modifiers {
         display: flex;
@@ -28,10 +29,13 @@
             width: 20px;
             cursor: pointer;
 
-            &.selected {
-                background-color: var(--pico-color-primary);
+            >img {
+                filter: grayscale(1);
+            }
+
+            &.selected>img {
+                filter: unset;
             }
         }
     }
-
 }
