default characteristic selection to none, bind to form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,8 +41,8 @@
             <fieldset>
                 <legend>Power Roll Options</legend>
                 <label for="characteristic">Characteristic</label>
-                <select formControlName="characteristic" id="characteristic" name="characteristic">
-                    <option value="none"></option>
+                <select formControlName="characteristic" id="characteristic" name="characteristic" [value]="">
+                    <option value="null">None</option>
                     <option value="might">Might</option>
                     <option value="agility">Agility</option>
                     <option value="reason">Reason</option>
