--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,10 @@
     <ul>
         <li>
             <a (click)="toggleTheme()" href="javascript:;">
-                @if(theme() === 'dark') {
-                    <img class="theme-icon" style="filter: invert(1)" src="moon.svg" alt="dark theme">
-                }
-                @else {
-                    <img class="theme-icon" src="light.svg" alt="light theme">
-                }
+                <img class="theme-icon"
+                    [ngClass]="{'invert': theme() === 'dark'}"
+                    src="{{theme() === 'dark' ? 'moon.svg' : 'light.svg'}}"
+                    alt="{{theme() === 'dark' ? 'dark theme' : 'light theme'}}">
             </a>
         </li>
     </ul>
@@ -53,13 +51,13 @@
                 <!-- or find a better edge icon -->
                 <div class="modifiers">
                     <label>Edges</label>
-                    <div (click)="toggleEdge(1)" [ngClass]="{selected: rollOptionsForm.value.numEdges! >= 1}" class="edge"><img src="edge.svg" alt="1 edge"/></div>
-                    <div (click)="toggleEdge(2)" [ngClass]="{selected: rollOptionsForm.value.numEdges! === 2}"class="edge"><img src="edge.svg" alt="2 edges"/></div>
+                    <app-aura-icon (click)="toggleEdge(1)" [selected]="rollOptionsForm.value.numEdges! >= 1" iconSrc="edge.svg" iconAlt="1 edge"></app-aura-icon>
+                    <app-aura-icon (click)="toggleEdge(2)" [selected]="rollOptionsForm.value.numEdges! === 2" iconSrc="edge.svg" iconAlt="2 edges"></app-aura-icon>
                 </div>
                 <div class="modifiers">
                     <label>Banes</label>
-                    <div (click)="toggleBane(1)" [ngClass]="{selected: rollOptionsForm.value.numBanes! >= 1}"class="bane"><img src="bane.svg" alt="1 bane"/></div>
-                    <div (click)="toggleBane(2)" [ngClass]="{selected: rollOptionsForm.value.numBanes! === 2}"class="bane"><img src="bane.svg" alt="2 banes"/></div>
+                    <app-aura-icon (click)="toggleBane(1)" [selected]="rollOptionsForm.value.numBanes! >= 1" iconSrc="bane.svg" iconAlt="1 bane"></app-aura-icon>
+                    <app-aura-icon (click)="toggleBane(2)" [selected]="rollOptionsForm.value.numBanes! === 2" iconSrc="bane.svg" iconAlt="2 banes"></app-aura-icon>
                 </div>
             </fieldset>
             <button type="submit">Roll!</button>
