--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 .theme-icon {
     height: 20px;
     width: 20px;
+    transition: all var(--pico-transition);
+    &.invert {
+        filter: invert(1);
+    }
 }
 
 .content {
@@ -21,21 +25,8 @@
         display: flex;
         gap: 2rem;
         justify-content: space-evenly;
+        align-items: center;
         padding: var(--pico-block-spacing-horizontal) var(--pico-block-spacing-vertical);
         margin-bottom: var(--pico-spacing);
-
-        .edge,.bane {
-            height: 20px;
-            width: 20px;
-            cursor: pointer;
-
-            >img {
-                filter: grayscale(1);
-            }
-
-            &.selected>img {
-                filter: unset;
-            }
-        }
     }
 }
