--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,21 +12,27 @@
 .content {
     display: flex;
     gap: 2rem;
+    height: 90vh;
     @media screen and (max-width: $mobile-width) {
         flex-flow: column;
+        height: 50vh;
     }
 
     .dice-box {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 50vh;
+        height: 50%;
+        width: 100%;
         margin-bottom: var(--pico-spacing);
         border: 1px solid var(--pico-contrast);
-        @media screen and (max-width: $mobile-width) {
-            width: auto;
-        }
     }    
+
+    .history {
+        height: 50%;
+        overflow-y: scroll;
+        padding: var(--pico-spacing)
+    }
 
     .modifiers {
         display: flex;
@@ -35,10 +41,5 @@
         align-items: center;
         padding: var(--pico-block-spacing-horizontal) var(--pico-block-spacing-vertical);
         margin-bottom: var(--pico-spacing);
-    }
-
-    .history {
-        height: 40vh;
-        overflow-y: scroll;
     }
 }
