--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@
     --pico-form-element-spacing-vertical: 0.5rem;
 }
 
+main {
+    height: auto;
+}
+
 canvas {
     height: 100%;
     width: 100%;
