keep right section from collapsing when forms are hidden

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,8 @@
     }
 
     &__forms {
+        min-width: 210px;
+
         &__roll {
             &__modifiers {
                 display: flex;
