--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
             <button type="submit">Roll!</button>
         </form>
     </div>
-    <div class="content__dice" style="width: 100%; height: 50vh">
+    <div class="content__dice">
         <div class="content__dice__box">
         </div>
         <div #history class="content__dice__history">
