--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import '../styles.scss';
+@use '../styles.scss';
 
 .theme-icon {
     height: 20px;
@@ -12,10 +12,11 @@
 .content {
     display: flex;
     gap: 2rem;
-    height: 87vh;
-    @media screen and (max-width: $mobile-width) {
+    height: 85vh;
+    @media screen and (max-width: styles.$mobile-width) {
         flex-flow: column;
         gap: 1rem;
+        height: 87vh; 
     }
 
     &__forms {
@@ -34,6 +35,13 @@
     }
 
     &__dice {
+        width: 100%;
+        height: 80vh;
+
+        @media screen and (max-width: styles.$mobile-width) {
+            height: 50vh;
+        }
+
         &__box {
             display: flex;
             justify-content: center;
