--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,15 +21,15 @@
 .content {
     display: flex;
     gap: 2rem;
-    // height: 85vh;
+
     @media screen and (max-width: styles.$mobile-width) {
         flex-flow: column;
         gap: 1rem;
-        // height: 87vh; 
     }
 
     &__forms {
         min-width: 210px;
+        flex-basis: 20%;
 
         &__roll {
             &__modifiers {
@@ -44,7 +44,7 @@
     }
 
     &__dice {
-        width: 100%;
+        flex-basis: 80%;
         height: 80vh;
 
         @media screen and (max-width: styles.$mobile-width) {
@@ -67,4 +67,8 @@
             padding: var(--pico-spacing)
         }
     }
+}
+
+#characteristic-help {
+    margin-bottom: 0;
 }
